--- a/src/lang/extra/english.txt
+++ b/src/lang/extra/english.txt
@@ -2022,3 +2022,7 @@ STR_MODIFIER_TOGGLE_SHIFT_TOOLTIP                               :{BLACK}Click to
 STR_MODIFIER_TOGGLE_CTRL_TOOLTIP                                :{BLACK}Click to invert state of Ctrl key
 
 STR_ERROR_TUNNEL_DISALLOWED_ROAD                                :{WHITE}Tunnels not allowed for this road type
+
+STR_REFIT_SHIP_PART_DROPDOWN_TOOLTIP                            :{BLACK}Select which part of this ship to refit
+STR_REFIT_WHOLE_SHIP                                            :Whole ship
+STR_REFIT_SHIP_PART                                             :Part {NUM}
