--- a/src/lang/extra/simplified_chinese.txt
+++ b/src/lang/extra/simplified_chinese.txt
@@ -1231,15 +1231,12 @@ STR_DEPARTURES_VIA                                              :{ORANGE}经由{
 STR_DEPARTURES_TOC                                              :{ORANGE}{COMPANY}
 STR_DEPARTURES_GROUP                                            :{ORANGE}{GROUP}
 STR_DEPARTURES_VEH                                              :{ORANGE}{VEHICLE}
-STR_DEPARTURES_CALLING_AT                                       :{TINY_FONT}{ORANGE}正在呼叫：
-STR_DEPARTURES_CALLING_AT_LARGE                                 :{ORANGE}正在呼叫:
+STR_DEPARTURES_CALLING_AT                                       :{ORANGE}正在呼叫：
 STR_DEPARTURES_CALLING_AT_FIRST_STATION                         :{STATION}
 STR_DEPARTURES_CALLING_AT_STATION                               :{STRING}、{STATION}
 STR_DEPARTURES_CALLING_AT_LAST_STATION                          :{STRING}和{STATION}
-STR_DEPARTURES_CALLING_AT_LIST                                  :{TINY_FONT}{ORANGE}{STRING}。
-STR_DEPARTURES_CALLING_AT_LIST_LARGE                            :{ORANGE}{STRING}。
-STR_DEPARTURES_CALLING_AT_LIST_SMART_TERMINUS                   :{TINY_FONT}{ORANGE}{STRING}。此服务延续到{STATION}。
-STR_DEPARTURES_CALLING_AT_LIST_SMART_TERMINUS_LARGE             :{ORANGE}{STRING}。此服务延续到{STATION}。
+STR_DEPARTURES_CALLING_AT_LIST                                  :{ORANGE}{STRING}。
+STR_DEPARTURES_CALLING_AT_LIST_SMART_TERMINUS                   :{ORANGE}{STRING}。此服务延续到{STATION}。
 
 STR_DEPARTURES_TYPE_TRAIN                                       :{ORANGE}{TRAIN}
 STR_DEPARTURES_TYPE_TRAIN_SILVER                                :{SILVER}{TRAIN}
