--- a/src/lang/extra/korean.txt
+++ b/src/lang/extra/korean.txt
@@ -1236,8 +1236,8 @@ STR_DEPARTURES_TIME_ARR                                         :{ORANGE}{DATE_W
 STR_DEPARTURES_TIME_BOTH                                        :{ORANGE}{1:DATE_WALLCLOCK_TINY} {RED}{DOWN_ARROW} {ORANGE}{0:DATE_WALLCLOCK_TINY} {GREEN}{UP_ARROW}
 STR_DEPARTURES_TERMINUS                                         :{ORANGE}{STATION}{STRING}
 STR_DEPARTURES_TERMINUS_VIA_STATION                             :{ORANGE}{STATION}{STRING} 경유 {STRING}
-STR_DEPARTURES_TERMINUS_VIA                                     :{ORANGE}{STATION} 경유
-STR_DEPARTURES_VIA                                              :{ORANGE}경유 {STRING}{STRING}
+STR_DEPARTURES_TERMINUS_VIA                                     :{ORANGE}{STATION}{STRING} 경유
+STR_DEPARTURES_VIA                                              :{ORANGE}경유 {STRING}
 STR_DEPARTURES_TOC                                              :{ORANGE}{COMPANY}
 STR_DEPARTURES_GROUP                                            :{ORANGE}{GROUP}
 STR_DEPARTURES_VEH                                              :{ORANGE}{VEHICLE}
