--- a/src/lang/extra/english.txt
+++ b/src/lang/extra/english.txt
@@ -2044,3 +2044,8 @@ STR_REFIT_WHOLE_SHIP                                            :Whole ship
 STR_REFIT_SHIP_PART                                             :Part {NUM}
 
 STR_VERY_REDUCED                                                :Very reduced
+
+STR_STATION_VIEW_RENAME_TOOLTIP_EXTRA                           :{BLACK}{STRING}{}(Ctrl+Click "{STRING}" button to generate new default name).{}{}Ctrl+Click to exchange name with another station.
+STR_ERROR_CAN_T_EXCHANGE_STATION_NAMES                          :{WHITE}Can't exchange station names...
+STR_ERROR_STATIONS_NOT_IN_SAME_TOWN                             :{WHITE}... stations are not in the same town
+STR_ERROR_STATION_ATTACHED_TO_INDUSTRY                          :{WHITE}... station is attached to an industry
