--- a/src/lang/extra/english.txt
+++ b/src/lang/extra/english.txt
@@ -917,6 +917,7 @@ STR_TRACE_RESTRICT_TRAIN_STATUS_LOADING                         :loading
 STR_TRACE_RESTRICT_TRAIN_STATUS_WAITING                         :waiting
 STR_TRACE_RESTRICT_TRAIN_STATUS_LOST                            :lost
 STR_TRACE_RESTRICT_TRAIN_STATUS_REQUIRES_SERVICE                :requires service
+STR_TRACE_RESTRICT_TRAIN_STATUS_STOPPING_AT_STATION_WAYPOINT    :stopping at station/waypoint
 STR_TRACE_RESTRICT_REVERSE_SIG                                  :Reverse behind signal
 STR_TRACE_RESTRICT_REVERSE_SIG_CANCEL                           :Cancel reverse behind signal
 STR_TRACE_RESTRICT_SET_SPEED_RESTRICTION                        :Restrict train speed to: {VELOCITY}
